# pulumi-talos-cluster

./: .gitignore  .golangci.yml  .goreleaser.yaml  .pulumi.version  AGENTS.md  Makefile  README.md  go.work  go.work.sum  introduce_schema_defaults.md  pyrightconfig.json
integration-tests/: Makefile  eslint.config.js  examples_test.go  go.mod  go.sum  go_test.go  nodejs_test.go  package.json  poetry.toml  pyproject.toml  python_test.go  requirements.txt  tsconfig.json
integration-tests/applier/: talosctl_gen_test.go
integration-tests/packer/: README.md  hcloud-clean-old-snapshots.sh  hcloud-talos.pkr.hcl  run-packer.go
integration-tests/pkg/: __init__.py
integration-tests/pkg/cloud/: provider.go
integration-tests/pkg/cloud/go/hcloud/: hcloud.go  (+1 more)
integration-tests/pkg/cloud/hcloud/: hcloud.go
integration-tests/pkg/cluster/: __init__.py  cluster.go  deploy.go  schema.json  spec.go  spec.py  spec.ts
integration-tests/pkg/cluster/fixtures/: load-defaults.yaml  load-malformed.yaml  load-minimal.yaml  load-valid.yaml  validation-anchors.yaml  validation-empty-machines.yaml  validation-ip-outside.yaml  validation-missing-id.yaml  validation-missing-machines.yaml  validation-missing-name.yaml  validation-missing-networks.yaml  validation-missing-platform.yaml  validation-missing-private-ip.yaml  validation-missing-type.yaml  validation-networks-present.yaml  validation-single-network.yaml  validation-unknown-machine.yaml  validation-unknown-top.yaml  validation-unsupported-platform.yaml
integration-tests/pkg/cluster/go/: cluster.go  defaults.go  defaults_test.go  deploy.go  spec.go  spec_test.go  validation.go  validation_test.go
integration-tests/pkg/cluster/python/: __init__.py  defaults.py  defaults_test.py  spec.py  spec_test.py  validation.py  validation_test.py
integration-tests/pkg/cluster/typescript/: cluster.ts  defaults.test.ts  index.ts  spec.test.ts  spec.ts  validation.test.ts  validation.ts
integration-tests/pkg/hcloud/: hcloud.go
integration-tests/pkg/talos/: talos.go
integration-tests/testdata/: cluster.yaml
integration-tests/testdata/programs/hcloud-go/: cluster.yaml  go.mod  go.sum  main.go  talos.go
integration-tests/testdata/programs/hcloud-ha-go/: Pulumi.yaml  cluster.yaml  go.mod  go.sum  main.go
integration-tests/testdata/programs/hcloud-ha-py/: Pulumi.yaml  README.md  __main__.py  cluster.yaml  hetzner.py  requirements.txt
integration-tests/testdata/programs/hcloud-js/: Pulumi.yaml  cluster.yaml  hetzner.ts  index.ts  package.json  tsconfig.json  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_talos_cluster/: README.md  __init__.py  _enums.py  _inputs.py  _utilities.py  apply.py  cluster.py  outputs.py  provider.py
(+158 files in other folders)
