[project]
name = "pulumi-talos-cluster-integration-tests-infra"
version = "0.0.0"
description = "Shared integration test utilities for pulumi-talos-cluster"
requires-python = ">=3.10"
dependencies = [
  "pyyaml==6.0.2",
  "pytest==8.3.3",
  "jsonschema==4.23.0",
  "pulumi==3.210.0",
  "pulumi-hcloud==1.24.0",
  "ruff==0.14.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "pkg"}

[tool.setuptools.packages.find]
where = ["pkg"]
include = ["cluster*"]

[[tool.poetry.packages]]
include = "cluster"
from = "pkg"

