[project]
  name = "pulumi_talos_cluster"
  description = "Create and manage Talos kubernetes cluster"
  dependencies = ["parver>=0.2.1", "pulumi>=3.210.0,<4.0.0", "pulumi-command>=1.1.0,<2.0.0", "pulumiverse-talos>=0.6.0,<0.7.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "talos", "category/infrastructure", "kind/component", "kubernetes"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Repository = "https://github.com/spigell/pulumi-talos-cluster"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_talos_cluster = ["py.typed", "pulumi-plugin.json"]
